<?xml version="1.0" encoding="utf-8"?><!--Основной экран приложения плей лист-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/padding16dp"
    android:paddingTop="@dimen/padding14dp"
    android:paddingRight="@dimen/padding16dp"
    tools:context=".MainActivity">

    <!--Заголовок-->
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="start"
        android:layout_marginBottom="@dimen/margin40dp"
        android:fontFamily="@font/ys_display_medium"
        android:paddingTop="@dimen/padding2dp"
        android:paddingBottom="@dimen/padding2dp"
        android:text="@string/app_name"
        android:textColor="@color/main_text_title_PLM"
        android:textSize="@dimen/text22sp" />

    <!--Первая кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Find"
        style="@style/Theme.Button.main_activity"
        android:text="@string/app_find"
        app:icon="@drawable/main_search" />

    <!--Вторая кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Media"
        style="@style/Theme.Button.main_activity"
        android:text="@string/app_media"
        app:icon="@drawable/main_laibrary" />

    <!--Третья кнопка-->
    <com.google.android.material.button.MaterialButton
        android:id="@+id/button_Settings"
        style="@style/Theme.Button.main_activity"
        android:text="@string/app_settings"
        app:icon="@drawable/main_settings" />
</LinearLayout>