<?xml version="1.0" encoding="utf-8"?>
<!--Экран настроек приложения плей лист-->
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SettingsActivity">

    <!--Кнопка назад и заголовок-->
    <FrameLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/margin40dp"
        android:orientation="horizontal"
        android:paddingStart="@dimen/padding20dp"
        android:paddingTop="@dimen/padding14dp">

        <ImageView
            android:id="@+id/image_settings_Home"
            style="@style/backArrowSearch"
            android:layout_width="@dimen/paramHW16dp"
            android:layout_height="@dimen/paramHW16dp"
            android:layout_marginTop="@dimen/margin6dp"
            android:src="@drawable/settings_arrow_back" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginStart="@dimen/margin28dp"
            android:fontFamily="@font/ys_display_medium"
            android:gravity="center"
            android:text="@string/app_settings"
            android:textAllCaps="false"
            android:textSize="@dimen/text22sp" />
    </FrameLayout>

    <!--Темная тема-->
    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingStart="@dimen/padding16dp">

        <TextView
            style="@style/text_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/padding21dp"
            android:text="@string/app_settings_theme" />

        <Switch
            android:id="@+id/switch_Widget"
            style="@style/Theme.Button.activity_settings"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="right|center_vertical"
            android:thumb="@drawable/settings_dark_theme"
            android:trackTint="@color/settings_image_PLM"
            tools:ignore="TouchTargetSizeCheck,UseSwitchCompatOrMaterialXml" />
    </FrameLayout>


    <!--Поделиться-->
    <Button
        android:id="@+id/button_settings_Share"
        style="@style/Theme.Button.activity_settings"
        android:text="@string/app_settings_share"
        app:icon="@drawable/settings_share" />

    <!--Написать в поддержку-->
    <Button
        android:id="@+id/button_settings_Support"
        style="@style/Theme.Button.activity_settings"
        android:text="@string/app_settings_help"
        app:icon="@drawable/settings_support" />

    <!--Пользовательское соглашение-->
    <Button
        android:id="@+id/button_settings_Confirm"
        style="@style/Theme.Button.activity_settings"
        android:paddingEnd="@dimen/padding23dp"
        android:text="@string/app_settings_doc"
        app:icon="@drawable/settings_arrow_forward" />
</LinearLayout>